--- a/index.css
+++ b/index.css
@@ -1,3 +1,109 @@
+/* *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: aqua;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.container{
+    display: flex;
+    width: 80%;
+    height: 80vh;
+    margin: 10px;
+}
+
+.menu{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width:30%;
+    background-color: aquamarine;
+}
+
+#menuBtn{
+    margin: 10px;
+    width: 15rem;
+    padding: 15px;
+}
+
+.data{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    background-color: yellow;
+}
+
+#userInput, input{
+    display: flex;
+    flex-direction: column;
+    margin-left: 4rem;
+    width: 25rem;
+    padding: 15px;
+    margin-top: 15px;
+    border-radius: 10px;
+    outline: none;
+    border-style: none;
+}
+
+.submitBtn{
+    margin-left: 4rem;
+    width: 25rem;
+    padding: 20px;
+    border-style: none;
+    border-radius: 5px;
+    margin-top: 20px;
+    cursor: pointer;
+}
+
+.allTasks, .completeTasks{
+    display: none;
+}
+
+.allTasksTitle{
+    text-align: center;
+    font-size: 1.3rem;
+    margin-top: 10px;
+    
+}
+
+
+ul{
+    list-style-type: none;
+    margin: 10px;
+    padding: 10px;
+    font-size: 1rem;
+    
+}
+
+li{
+    padding: 5px;
+
+}
+
+
+/* 
+.form{
+    display: none;
+} */
+
+/* .greetings{
+    font-size: 2.5rem;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+} */ 
+
+
+
 *{
     margin: 0;
     padding: 0;
@@ -52,7 +158,7 @@ input, textarea{
     border-style: none;
 }
 
-.submit_btn{
+.submitBtn{
     padding: 10px;
     border-style: none;
     display: block;
@@ -91,4 +197,5 @@ ul{
     margin-left: -160px;
     font-size: 0.7rem;
     padding: 4px;
+    cursor: pointer;
 }
