--- a/index.css
+++ b/index.css
@@ -5,90 +5,79 @@
 }
 
 body{
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height: 100vh;
     background-color: darkviolet;
-    color: white;
-
+    color:  hsl(0, 0%, 100%);
+    height: 100vh;
+    width: 100%;
 }
 
-/* .menu{
+.container{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 40%;
-    height: 100vh;
-    background-color: blueviolet;
-}
-
-#btn{
-    width: 40%;
-    margin: 20px auto;
-    padding: 15px;
-} */
-
-.container{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
     align-items: center;
-    margin-top: 100px;
-    gap:30px;
+    margin-top: 50px;
 }
 
-.owner{
-    text-align: center;
-    margin-top: ;
-}
-
-input, textarea{
-    padding: 10px;
-    margin: 10px;
-    width: 400px;
-    border-radius: 5px;
-    border-style: none;
-}
-
-.submit_btn{
-    padding: 10px;
-    border-style: none;
-    display: block;
-    margin: auto;
-    margin-top: 20px    
-}
-
-ul{
-    list-style-type: none;
-    margin-left: 59px;
-    padding-top: 10px;
-}
-
-.uncompleted_tasks{
+.userInputs{
     display: flex;
     flex-direction: column;
+    width: 700px;
+    /* height: 300px; */
+    background-color: darkviolet;
 }
 
-.uncomplete_tasks_title{
-    margin-left: 70px;
+input{
+    margin: 20px;
+    padding: 10px;
+    border-radius: 6px;
+    border-style: none;
+    font-size: 16px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-.task_list, p{
-    padding: 5px;
-    margin-left: 20px;
-    font-size: 1.2rem;
+.submitTask{
+    margin: 0 20px;
+    padding: 10px;
+    font-size: 17px;
+    border-radius: 5px 10px;
+    border-style: none;
+    cursor: pointer;
 }
 
-.all_tasks{
+.allTasksDiv, .taskDiv{
+    margin: 18px;
+    background-color: rgb(255, 255, 255);
+    color: #000;
+    width: 500px;
+    padding: 10px;
+    border-radius: 5px 30px;
+}
+
+.complete-todo{
+    height: 25px;
+    width: 25px;
+    margin: 20px 10px;
+}.delete{
+    width: 20px;
+    height: auto;
+}
+
+.taskContent{
     display: flex;
-    margin: 10px;
-    gap: 90px;
 }
 
-.checkBtn, .dltBtn{
-    margin-left: -160px;
-    font-size: 0.7rem;
-    padding: 4px;
+p{
+    padding: 5px;
+}
+
+.taskDiv{
+    background-color: rgb(255, 255, 255);
+    
+}
+
+h2{
+    margin: 20px;
+    font-family: cursive;
+    text-decoration: underline;
 }
